templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-server-service
spec:
  ports:
    - name: http-web-svc-port
      port: 80
      targetPort: http-web-port
      protocol: TCP
  # type: NodePort
  selector:
    app: nginx
  # externalIPs:  # ref:https://kubernetes.github.io/ingress-nginx/deploy/baremetal/#over-a-nodeport-service
  # - 192.168.49.2
